Fix issue with search z-index.

--- a/resources/scss/search.scss
+++ b/resources/scss/search.scss
@@ -1,4 +1,4 @@
-.select-field_type {
+.relationship-field_type {
     .choices {
         z-index: 100;
     }
